--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".CreateEvent"
+            android:label="@string/title_activity_create_event"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".Login"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity android:name=".AddUserstoMeeting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
