--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -13,15 +13,14 @@
             android:name=".CreateEvent"
             android:label="@string/title_activity_create_event"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".Login"
-            android:label="@string/app_name" />
-        <activity android:name=".AddUserstoMeeting">
+        <activity android:name=".Login"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".AddUserstoMeeting">
         </activity>
         <activity
             android:name=".EventNoteAddition"
@@ -31,11 +30,6 @@
             android:name=".PasswordReset"
             android:label="Password Reset"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Registration"
