Removed duplicate ".AddUserstoMeeting" in AndroidManifest.xml

--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.meetingmasterclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -46,7 +47,6 @@
             android:label="My Profile"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".AddUserstoMeeting" />
         <activity
             android:name=".EventNoteAddition"
             android:label="Event Note"
