--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.meetingmasterclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +14,7 @@
 
         <activity android:name=".Create_a_Meeting"
             android:label="Create a Meeting">
-
+        </activity>
         <activity
             android:name=".EventListView"
             android:label="My Events"
@@ -28,36 +27,25 @@
         </activity>
         <activity android:name=".Login"
             android:label="@string/app_name">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AddUserstoMeeting"
             android:label="Add User to Meeting">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".EventNoteAddition"
             android:label="Event Note"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".AddUserstoMeeting">
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".EventEdition"
             android:label="Event Edition"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-
         <activity
             android:name=".UserSearch"
             android:label="User Search"
@@ -71,23 +59,18 @@
         <activity
             android:name=".EventNoteAddition"
             android:label="Event Note"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
             android:name=".PasswordReset"
             android:label="Password Reset"
             android:theme="@style/AppTheme.NoActionBar">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         </activity>
         <activity
             android:name=".Registration"
-            android:label="@string/title_activity_registration" />
+            android:label="@string/title_activity_registration">
+        </activity>
+
 
     </application>
 
