--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.meetingmasterclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,22 +11,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".Create_a_Meeting"
-            android:label="Create a Meeting">
+        <activity
+            android:name=".Create_a_Meeting"
+            android:label="Create a Meeting" />
 
         <activity
             android:name=".EventListView"
             android:label="My Events"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".EventCreation"
             android:label="@string/title_activity_create_event"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".Login"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Login"
             android:label="@string/app_name">
 
             <intent-filter>
@@ -37,54 +39,30 @@
 
         <activity
             android:name=".AddUserstoMeeting"
-            android:label="Add User to Meeting">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".EventNoteAddition"
-            android:label="Event Note"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".AddUserstoMeeting">
-        </activity>
-        <activity
-            android:name=".EventEdition"
-            android:label="Event Edition"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-        <activity
-            android:name=".UserSearch"
-            android:label="User Search"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity
-            android:name=".ProfileEdition"
-            android:label="My Profile"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".AddUserstoMeeting" />
+            android:label="Add User to Meeting" />
         <activity
             android:name=".EventNoteAddition"
             android:label="Event Note"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".EventEdition"
+            android:label="Event Edition"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".UserSearch"
+            android:label="User Search"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ProfileEdition"
+            android:label="My Profile"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".PasswordReset"
             android:label="Password Reset"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        </activity>
         <activity
             android:name=".Registration"
             android:label="@string/title_activity_registration" />
