Fixed constraints in Create_a_Meeting

--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -12,8 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".Login"
+            android:label="@string/app_name">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".Create_a_Meeting"
-            android:label="Create a Meeting"></activity>
+            android:label="Create a Meeting">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
 
         <activity
             android:name=".EventListView"
@@ -24,16 +43,9 @@
             android:name=".EventCreation"
             android:label="@string/title_activity_create_event"
             android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".Login"
-            android:label="@string/app_name">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+
 
         <activity
             android:name=".AddUserstoMeeting"
@@ -53,6 +65,12 @@
             android:name=".EventEdition"
             android:label="Event Edition"
             android:theme="@style/AppTheme.NoActionBar">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
