--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -5,14 +5,16 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- DIABLE CLEARTEXT TRAFFIC LATER -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Event Details"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".DebugLauncherActivity">
 
             <intent-filter>
