--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -14,25 +14,17 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity
-            android:name=".EventCreation"
-            android:label="@string/title_activity_event_creation_new"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity android:name=".DebugLauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".InvitationListActivity"
-            android:label="@string/title_activity_invitation_list"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".EventListView"
-            android:label="My Events"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".Registration"
+            android:label="@string/title_activity_registration" />
         <activity
             android:name=".Login"
             android:label="@string/app_name">
@@ -43,12 +35,24 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".EventCreation"
+            android:label="@string/title_activity_event_creation_new"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
             android:name=".AddUserstoMeeting"
-            android:label="Add User to Meeting"></activity>
+            android:label="Add User to Meeting" />
+        <activity
+            android:name=".InvitationListActivity"
+            android:label="@string/title_activity_invitation_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".EventListView"
+            android:label="My Events"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".EventEdition"
             android:label="Event Edition"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".UserSearch"
             android:label="User Search"
@@ -56,14 +60,11 @@
         <activity
             android:name=".ProfileEdition"
             android:label="My Profile"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".PasswordReset"
             android:label="Password Reset"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".Registration"
-            android:label="@string/title_activity_registration"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
