Started changing to Retrofit and started profile details activity

--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -14,14 +14,17 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity
+            android:name=".ProfileDetails"
+            android:label="@string/title_activity_profile_details"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".DebugLauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Registration"
             android:label="@string/title_activity_registration" />
@@ -37,7 +40,7 @@
         <activity
             android:name=".EventCreation"
             android:label="@string/title_activity_event_creation"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddUserstoMeeting"
             android:label="Add User to Meeting" />
@@ -66,4 +69,5 @@
             android:label="Password Reset"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
+
 </manifest>
