--- a/meeting_server/requirements.txt
+++ b/meeting_server/requirements.txt
@@ -1,8 +1,10 @@
-Django
-djangorestframework
-django-rest-swagger
-django-phonenumber-field
-phonenumberslite
-django-rest-auth
-django-allauth
-Pillow
+Django==2.1.7
+django-allauth==0.39.1
+django-filter==2.1.0
+django-phonenumber-field==2.2.0
+django-rest-auth==0.9.3
+django-rest-swagger==2.2.0
+djangorestframework==3.9.2
+drf-writable-nested==0.5.1
+phonenumberslite==8.10.6
+Pillow==5.4.1
