--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
             android:label="Password Reset2"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity
             android:name=".ProfileDetails"
             android:label="@string/title_activity_profile_details"
             android:theme="@style/AppTheme.NoActionBar" />
