--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- DIABLE CLEARTEXT TRAFFIC LATER -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,28 +14,26 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity
+            android:name=".AttendeeList"
+            android:label="@string/title_activity_attendee_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".DebugLauncherActivity"
             android:theme="@style/AppTheme.NoActionBar">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".EventDetails" />
-
         <activity
             android:name=".Registration"
             android:label="@string/title_activity_registration" />
         <activity
             android:name=".Login"
             android:label="@string/app_name">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,6 +47,9 @@
         <activity
             android:name=".AddUserstoMeeting"
             android:label="Add User to Meeting" />
+        <activity
+            android:name=".AttendeeList"
+            android:label="Attendee List" />
         <activity
             android:name=".InvitationListActivity"
             android:label="@string/title_activity_invitation_list"
@@ -75,22 +75,21 @@
             android:label="Password Reset"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-
             android:name=".PasswordReset2"
             android:label="Password Reset2"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".ProfileDetails"
             android:label="@string/title_activity_profile_details"
             android:theme="@style/AppTheme.NoActionBar" />
-      
-        <service android:name=".MyFirebaseMessagingService"
+
+        <service
+            android:name=".MyFirebaseMessagingService"
             android:permission="signature">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
+
 </manifest>
