UI Changes to Attendee List and Event Creation

--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -38,8 +38,7 @@
         </activity>
         <activity
             android:name=".EventCreation"
-            android:label="@string/title_activity_event_creation"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_event_creation"/>
         <activity
             android:name=".AddUserstoMeeting"
             android:label="@string/title_activity_add_users_to_meeting" />
