--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".SuggestionsListActivity"
+            android:label="@string/title_activity_suggestions_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".DebugLauncherActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
