Finished leaving alarm and notification

--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -141,6 +141,9 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <receiver android:name=".utils.StartingSoonAlarm" />
+        <receiver android:name=".utils.LeaveNowAlarm" />
     </application>
 
 </manifest>
