Figured out how to autofill a field in ProfileEdition

--- a/meeting_client/app/src/main/AndroidManifest.xml
+++ b/meeting_client/app/src/main/AndroidManifest.xml
@@ -114,8 +114,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ProfileEdition"
-            android:label="My Profile"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="My Profile" />
         <activity
             android:name=".PasswordReset"
             android:label="Password Reset"
