--- a/meeting_client/app/build.gradle
+++ b/meeting_client/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
+    implementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
