--- a/meeting_client/app/build.gradle
+++ b/meeting_client/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation 'com.squareup.retrofit2:retrofit-mock:2.5.0'
 
 
     implementation 'com.android.support:design:28.0.0'
