Server tests for accept/decline events

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ meeting_client/\.idea/gradle\.xml
 meeting_client/\.idea/misc\.xml
 
 meeting_client/\.idea/encodings\.xml
+
+\.idea/encodings\.xml
+
+\.idea/misc\.xml
